--- a/package.json
+++ b/package.json
@@ -14,11 +14,22 @@
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "cross-env": "^7.0.3",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-webpack-plugin": "^2.5.4",
     "html-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.4",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "eslintConfig": {
+    "extends": "airbnb-base",
+    "exclude": "./dist",
+    "rules": {
+      "no-console": "off"
+    }
   }
 }
