--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack serve --config build/webpack.config.js",
+    "start": "npm run dev",
     "build": "cross-env NODE_ENV=production webpack --config build/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,7 +28,6 @@
   },
   "eslintConfig": {
     "extends": "airbnb-base",
-    "exclude": "./dist",
     "rules": {
       "no-console": "off"
     }
