--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jquery": "^3.5.6",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.30.0",
@@ -31,5 +32,8 @@
     "rules": {
       "no-console": "off"
     }
+  },
+  "dependencies": {
+    "jquery": "^3.6.0"
   }
 }
