--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "06-typescript",
+  "name": "typescript-notes",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack serve --config build/webpack.config.js",
+    "dev": "webpack serve --node-env development --config build/webpack.config.js",
     "start": "npm run dev",
-    "build": "cross-env NODE_ENV=production webpack --config build/webpack.config.js",
+    "build:dev": "webpack --node-env development --config build/webpack.config.js",
+    "build:prod": "webpack --node-env production --config build/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,26 +15,16 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jquery": "^3.5.6",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "cross-env": "^7.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "clean-webpack-plugin": "^4.0.0",
     "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^5.3.2",
-    "ts-loader": "^9.2.5",
-    "typescript": "^4.4.2",
-    "webpack": "^5.51.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.3",
+    "webpack": "^5.54.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0"
+    "webpack-dev-server": "^4.3.0"
   },
-  "eslintConfig": {
-    "extends": "airbnb-base",
-    "rules": {
-      "no-console": "off"
-    }
-  },
-  "dependencies": {
-    "jquery": "^3.6.0"
-  }
+  "dependencies": {}
 }
